# Antlr4Lua

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LuaLexer.g4  LuaParser.g4  compile.sh  main.cpp
base/: CMakeLists.txt  LuaLexerBase.cpp  LuaLexerBase.h  LuaParserBase.cpp  LuaParserBase.h  LuaRuleContext.cpp  LuaRuleContext.h
code_gen/: CMakeLists.txt  CodeGen.cpp  CodeGen.h  FuncInfo.cpp  FuncInfo.h  OpCodes.h  OpCodesType.h  aux.cpp  aux.h  number.cpp  number.h  type.h
vm/: CMakeLists.txt  Instruction.cpp  Instruction.h  OpCode.cpp  OpCode.h  Operator.h  Stack.cpp  Stack.h  State.cpp  State.h  Struct.cpp  Struct.h  Value.cpp  Value.h  VirtualMachine.cpp  VirtualMachine.h
vm/stdlib/: base.cpp  base.h  coroutine.cpp  coroutine.h  libtype.h  math.cpp  math.h  mathOp.cpp  mathOp.h  os.cpp  os.h  package.cpp  package.h  stdlib.h  stringOp.cpp  stringOp.h  table.cpp  table.h  utf8.cpp  utf8.h
